tests/paczka2/big_fuzzy/95021818.err
Error in line 8: JETEUPhRVln S80 78,6
Error in line 16: 6qWnV6 A340 0,7
Error in line 22: vvEXzSm S80 53,9
Error in line 27: 9Y6 A340 352,7
Error in line 38: 6qWnV6 S80 76,6
Error in line 35: dRopjyJ A186 51,3
Error in line 40: A45 A186 74,7
Error in line 41: dRopjyJ A340 4,5
Error in line 51: JETEUPhRVln A45 34,5
Error in line 50: A45 A186 15,2
Error in line 47: ifotMrclf A186 6,3
Error in line 71: A45 S80 49,3
Error in line 56: ifotMrclf A340 15,2
Error in line 85: JETEUPhRVln A186 23,99
Error in line 77: ifotMrclf A186 55,4
Error in line 92: 6qWnV6 A340 64,3
Error in line 94: 9Y6 A186 76,5
Error in line 93: JETEUPhRVln A340 57,4
Error in line 117: 9Y6 A340 25,2
Error in line 130: A45 A45 85,75
Error in line 128: vvEXzSm S80 26,5
Error in line 137: 9Y6 A186 -2,0
Error in line 142: ifotMrclf S80 -1,4
Error in line 143: vvEXzSm A45 39,1
Error in line 147: vvEXzSm A186 46,1
Error in line 152: vvEXzSm A186 74,8
Error in line 163: vvEXzSm SF0 131,F
Error in line 160: dRopjyJ A340 68,8
Error in line 168: vvEXzSm S80 417,9
Error in line 175: ifotMrclf S80 31,07
Error in line 123: 9Y6 A186 97,5
Error in line 192: JETEUPhRVln A45 11,0
Error in line 197: JETEUPhRVln S80 154,6
Error in line 218: A45 A340 6,1
Error in line 228: 9Y6 A340 80,2
Error in line 227: vvEXzSm A340 64,4
Error in line 241: 9Y6 A1V6 7V,3
Error in line 212: dRopjyJ A186 52,2
Error in line 236: 9Y6 A45 73,6
